@@ -67,6 +67,7 @@ shellFeedbackHeadline = "kreXX messages"
 maximumLevelReached1 = "Maximum nesting level for the analysis was reached. I will not go any further."
 maximumLevelReached2 =  "To increase this value, change the Prune output => level setting."
 stringTooLarge = "This is a very large string with a none-standard encoding.<br /> For security reasons, we must escape it, but it is too large for this. Sorry."
+stringTooLargeNormal = "This is a very large string.<br /> For security reasons, we must escape it, but it is too large for this. Sorry."
 maxCallReached = "Maximum call-level reached. This is the last analysis for this request. To increase this value, please edit:<br />Emergency stop => Max amount of calls."
 noSourceAvailable = "No sourcecode available. Maybe this was an internal callback (call_user_func for example)?"
 getterNull = "A NULL value as a result may indicate that this value gets computed by the getter method, and does not exist inside the class at the moment of the analysis."
@@ -287,6 +288,7 @@ shellFeedbackHeadline = "kreXX Messages"
 maximumLevelReached1 = "Maximale Verschachtelung erreicht."
 maximumLevelReached2 =  "Um diesen Wert zu erhöhen muss der Wert 'Ausgabe begrenzen => Maximale Verschachtelung' erhöht werden."
 stringTooLarge = "Das hier ist ein extrem großer String, in einer Nicht-Standard-Kodierung.<br /> Aus Sicherheitsgründen müssten wir ihn escapen, aber er ist einfach zu groß dafür. Sorry."
+stringTooLargeNormal = "Das hier ist ein extrem großer String.<br /> Aus Sicherheitsgründen müssten wir ihn escapen, aber er ist einfach zu groß dafür. Sorry."
 maxCallReached = "Maximale anzahl an Aufrufen erreicht. Dies ist die letzte Analyse für diesen Request. Um diesen wert zu erhöhen, bitte 'Nothalt => Maximale Anzahl an Aufrufen' anpassen."
 noSourceAvailable = "Quellcode steht nicht zur Verfügung. Eventuell war das ein interner aufruf (z.B. call_user_func())?"
 getterNull = "Ein NULL Wert kann bedeuten dass der Wert erst noch von der Getter Methode errechnet wird und deswegen zum Zeitpunkt der analyse noch nicht existiert."
